force-app/main/default/objects/Ambassador_Qualification__c/Ambassador_Qualification__c.object-meta.xml
<CustomObject>
    <label>Ambassador Qualification</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Ambassador Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ambassador Qualifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>