force-app/main/default/objects/Ambassador_Qualification__c/fields/Ambassador_Qualification_Status__c.field-meta.xml
<CustomField>
    <fullName>Ambassador_Qualification_Status__c</fullName>
    <label>Ambassador Qualification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Submitted</fullName>
            </value>
            <value>
                <fullName>Application Reviewed</fullName>
            </value>
            <value>
                <fullName>Active Six Months</fullName>
            </value>
            <value>
                <fullName>Ready for Onboarding</fullName>
            </value>
            <value>
                <fullName>Onboarded</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Ready for Training</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>