force-app/main/default/objects/Ambassador_Qualification__c/fields/Ambassador_Recertification_Status__c.field-meta.xml
<CustomField>
    <fullName>Ambassador_Recertification_Status__c</fullName>
    <label>Ambassador Recertification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>Review Needed</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Legal Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Recertified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>