force-app/main/default/objects/Ambassador_Qualification__c/fields/Beta_Program_Participant_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Beta_Program_Participant_Legacy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beta Program Participant (Legacy)</label>
    <type>Checkbox</type>
</CustomField>