force-app/main/default/objects/Ambassador_Qualification__c/fields/Beta_Program_Start_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Beta_Program_Start_Legacy__c</fullName>
    <label>Beta Program Start (Legacy)</label>
    <type>Date</type>
</CustomField>