force-app/main/default/objects/Ambassador_Qualification__c/fields/Days_Since_Check_In__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Check_In__c</fullName>
    <formula>Contact__r.Days_since_Check_in__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Check-In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>