force-app/main/default/objects/Ambassador_Qualification__c/fields/Facebook_Handle__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Handle__c</fullName>
    <label>Facebook Handle</label>
    <length>20</length>
    <type>Text</type>
</CustomField>