force-app/main/default/objects/Ambassador_Qualification__c/fields/First_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Active_Date__c</fullName>
    <label>First Active Date</label>
    <type>Date</type>
</CustomField>