force-app/main/default/objects/Ambassador_Qualification__c/fields/Location_Geo__c.field-meta.xml
<CustomField>
    <fullName>Location_Geo__c</fullName>
    <label>Location/Geo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMER</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>