force-app/main/default/objects/Ambassador_Qualification__c/fields/Number_of_Followers_Twitter__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Followers_Twitter__c</fullName>
    <label>Number of Followers Twitter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>