force-app/main/default/objects/Ambassador_Qualification__c/fields/of_years_with_products__c.field-meta.xml
<CustomField>
    <fullName>of_years_with_products__c</fullName>
    <label>Number of Years With Products</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>