force-app/main/default/objects/Ambassador_Qualification__c/fields/Outdoor_Gear_Experience__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Gear_Experience__c</fullName>
    <label>Outdoor Gear Experience</label>
    <type>TextArea</type>
</CustomField>