force-app/main/default/objects/Ambassador_Qualification__c/fields/Recertification_Welcome_Pack_Sent__c.field-meta.xml
<CustomField>
    <fullName>Recertification_Welcome_Pack_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recertification Welcome Pack Sent</label>
    <type>Checkbox</type>
</CustomField>