force-app/main/default/objects/Ambassador_Qualification__c/fields/Social_Media_Audit_Date__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Audit_Date__c</fullName>
    <label>Social Media Audit Date</label>
    <type>Date</type>
</CustomField>