force-app/main/default/objects/Ambassador_Qualification__c/fields/Social_Media_Audited__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Audited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Social Media Audited</label>
    <type>Checkbox</type>
</CustomField>