force-app/main/default/objects/Ambassador_Qualification__c/fields/TikTok_Handle__c.field-meta.xml
<CustomField>
    <fullName>TikTok_Handle__c</fullName>
    <label>TikTok Handle</label>
    <length>20</length>
    <type>Text</type>
</CustomField>