force-app/main/default/objects/Ambassador_Qualification__c/fields/Wants_to_Recertify__c.field-meta.xml
<CustomField>
    <fullName>Wants_to_Recertify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wants to Recertify</label>
    <type>Checkbox</type>
</CustomField>