force-app/main/default/objects/Ambassador_Qualification__c/fields/Willing_to_Attend_In_Person_Events__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_Attend_In_Person_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Willing to Attend In-Person Events?</label>
    <type>Checkbox</type>
</CustomField>