force-app/main/default/objects/Ambassador_Qualification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Ambassador_Qualification_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>