force-app/main/default/objects/Ambassador_Qualification__c/listViews/Ambassador_Qualifications_by_Status.listView-meta.xml
<ListView>
    <fullName>Ambassador_Qualifications_by_Status</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Ambassador Qualifications by Status</label>
    <sharedTo>
        <group>Ambassador_Managers</group>
    </sharedTo>
</ListView>