force-app/main/default/objects/Ambassador_Qualification__c/listViews/Ready_for_Onboarding.listView-meta.xml
<ListView>
    <fullName>Ready_for_Onboarding</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Ambassador_Qualification_Status__c</field>
        <operation>equals</operation>
        <value>Ready for Onboarding</value>
    </filters>
    <label>Ready for Onboarding</label>
</ListView>